--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MarketSight</string>
+    <string name="news">News</string>
+    <string name="home">Home</string>
+    <string name="desc_icon_bottom_bar">icon bottom bar</string>
 </resources>
