--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="news">News</string>
     <string name="home">Home</string>
     <string name="desc_icon_bottom_bar">icon bottom bar</string>
-    <string name="get_news_error_message">Something went wrong, check your internet connection.</string>
+    <string name="get_news_error_message">Something went wrong when fetching the news. Check your Internet connection.</string>
     <string name="retry">Retry</string>
 </resources>
