--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="desc_icon_bottom_bar">icon bottom bar</string>
     <string name="get_news_error_message">Something went wrong when fetching the news. Check your Internet connection.</string>
     <string name="retry">Retry</string>
+    <string name="real_time">Live News</string>
+    <string name="latest_news">Latest News</string>
 </resources>
