--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="retry">Retry</string>
     <string name="real_time">Live News</string>
     <string name="latest_news">Latest News</string>
+    <string name="empty_news">Unable to find news for selected filters.</string>
 </resources>
