--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,17 @@
     <string name="real_time">Live News</string>
     <string name="latest_news">Latest News</string>
     <string name="empty_news">Unable to find news for selected filters.</string>
+    <string name="filter_list_news_btn">Filter list news button</string>
+    <string name="filters_news">Filters News</string>
+    <string name="filter_sort">Sort</string>
+    <string name="ascending">Ascending</string>
+    <string name="descending">Descending</string>
+    <string name="filter_symbols">Symbols</string>
+    <string name="all">All</string>
+    <string name="select">Select</string>
+    <string name="cancel">Cancel</string>
+    <string name="date_range">Date Range</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
+    <string name="clear_date">Clear Date</string>
 </resources>
