--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="start_date">Start Date</string>
     <string name="end_date">End Date</string>
     <string name="clear_date">Clear Date</string>
+    <string name="clear_all">Clear All</string>
+    <string name="apply">Apply</string>
+    <string name="error_subscription_real_time_news">An error occurred when trying to get news in real time.</string>
 </resources>
