--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,11 @@
     <string name="error_on_getting_bars">Something went wrong while trying to get the bars, please try again.</string>
     <string name="overview">Overview</string>
     <string name="not_available_data_chart">No data available.</string>
+    <string name="error_on_getting_quotes">An error occurred when trying to get quotes, try again.</string>
+    <string name="error_on_getting_trades">An error occurred when trying to get trades, try again.</string>
+    <string name="quotes">Quotes</string>
+    <string name="trades">Trades</string>
+    <string name="size">Size</string>
+    <string name="bid">Bid</string>
+    <string name="ask">Ask</string>
 </resources>
